--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
         cache: maven
         
     - name: Running Test Automation Framework with Maven
-      run: mvn test -x -Dbrowser=browser -DisLambdaTest=true -DisHeadLess=false
+      run: mvn test -X -Dbrowser=browser -DisLambdaTest=true -DisHeadLess=false
 
     - name : Upload Test logs
       if : always()
