--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,6 +40,31 @@ jobs:
       with :
         name : Test Reports 
         path : report.html
+
+    - name : Upload Screenshots as Artifacts
+      if : always()
+      uses: actions/upload-artifact@v4.6.2
+      with :
+        name : screenshots
+        path : screenshots/  
+
+    - name : Copy report to gh-pages Folder
+      if : always()
+
+      run: |
+        mkdir:-p public/extent-reports
+        cp -R report.html public/extent-reports/
+        cp-R screenshots/ public/extent-reports/screenshots/
+        ls-l
+
+    - name : Deploy
+      if: always()
+      uses: Jameslves/github-pages-deloy-deploy-action@v4
+      with:
+        folder : public/extent-reports/
+        token : ${{ secrets.PAT}}
+        clean : true
+    
         
     - name : Test  Execution Status
       run : echo "Test Execution Completed"   
