--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,7 +59,7 @@ jobs:
 
     - name : Deploy
       if: always()
-      uses: Jameslves/github-pages-deloy-deploy-action@v4
+      uses: actions/deploy-pages@v4.0.5
       with:
         folder : public/extent-reports/
         token : ${{ secrets.PAT}}
